--- a/Pertemuan 5/Latihan/app/src/main/res/layout/activity_menu1.xml
+++ b/Pertemuan 5/Latihan/app/src/main/res/layout/activity_menu1.xml
@@ -1,9 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Menu1">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/Btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Lbl1"
+
+        android:layout_toEndOf="@id/Btn1"
+        android:onClick="Rubah_Warna1"
+        android:text="@string/Btn2"
+        android:textSize="36sp" />
+
+    <TextView
+        android:id="@+id/Lbl1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Lbl1"
+        android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/Btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Lbl1"
+
+        android:onClick="Rubah_Warna"
+        android:text="@string/Btn1"
+        android:textSize="36sp" />
+</RelativeLayout>
