--- a/Pertemuan 5/Latihan/app/src/main/res/layout/activity_menu4.xml
+++ b/Pertemuan 5/Latihan/app/src/main/res/layout/activity_menu4.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu4">
+    tools:context=".Menu4"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/Lbl4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Masukkan Akar"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/Txt_angka"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <Button
+        android:id="@+id/Btn_Tampilkan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="Tampil_Hasil"
+        android:text="TAMPILKAN"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/Lbl_Hasil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        />
+
+</LinearLayout>
