--- a/Pertemuan 10/Proyek1/app/src/main/res/layout/activity_insert_and_view.xml
+++ b/Pertemuan 10/Proyek1/app/src/main/res/layout/activity_insert_and_view.xml
@@ -2,23 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".InsertAndViewActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
-
+    
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:padding="20dp">
         <TextView
             android:layout_width="wrap_content"
@@ -27,19 +27,21 @@
             android:text="Nama File : "
             android:layout_marginTop="20dp"
             android:textColor="#000"
-            android:textSize="12dp" />
-
+            android:textSize="12sp"/>
         <EditText
             android:id="@+id/editFilename"
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
-
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:padding="5dp"
+            android:singleLine="true"
+            android:textSize="14sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
-            android:text="Catatan"
+            android:text="Catatan : "
             android:textColor="#000"
             android:textSize="12sp"/>
         <EditText
@@ -54,7 +56,6 @@
             android:padding="5dp"
             android:textColor="#000"
             android:textSize="14sp"/>
-
         <Button
             android:id="@+id/btnSimpan"
             android:layout_width="match_parent"
@@ -63,7 +64,8 @@
             android:background="@color/colorPrimary"
             android:text="Simpan"
             android:textAllCaps="false"
-            android:textColor="#fff"
-            />
+            android:textColor="#FFF"
+            android:textSize="14sp"
+            android:textStyle="bold"/>
     </LinearLayout>
 </LinearLayout>
