--- a/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_login.xml
+++ b/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_login.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     android:orientation="vertical"
+    android:padding="20dp"
     tools:context=".LoginActivity">
-
+    
     <ImageView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -15,44 +17,36 @@
         android:adjustViewBounds="true"
         android:fitsSystemWindows="true"
         android:src="@drawable/logo"/>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Username"
         android:textColor="#000"
         android:textSize="14sp"/>
-
     <EditText
-        android:id="@+id/editUsername"
+        android:id="@+id/edtUsername"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-
         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
         android:inputType="textFilter"
         android:textColor="#000"
-        android:textSize="14sp"
-        />
-
+        android:textSize="14sp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Password"
         android:textColor="#000"
-        android:textSize="14sp"
-        />
-
+        android:textSize="14sp"/>
     <EditText
-        android:id="@+id/editPassword"
+        android:id="@+id/edtPassword"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
         android:inputType="textPassword"
         android:textColor="#000"
         android:textSize="14sp"/>
-
     <Button
         android:id="@+id/action_login"
         android:layout_width="match_parent"
@@ -60,10 +54,9 @@
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="Login"
-        android:textColor="#fff"
+        android:textColor="#FFF"
         android:textSize="16sp"
         android:textStyle="bold"/>
-
     <Button
         android:id="@+id/action_register"
         android:layout_width="match_parent"
@@ -71,7 +64,8 @@
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="Register"
-        android:textColor="#fff"
+        android:textColor="#FFF"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
+
 </LinearLayout>
