--- a/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_register.xml
+++ b/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_register.xml
@@ -7,31 +7,28 @@
     android:orientation="vertical"
     tools:context=".RegisterActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
-
+    
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="20dp">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Username"
                 android:textColor="#000"
-                android:textSize="14sp" />
-
+                android:textSize="14sp"/>
             <EditText
                 android:id="@+id/editUsername"
                 android:layout_width="match_parent"
@@ -41,7 +38,6 @@
                 android:inputType="textFilter"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:id="@+id/textViewPassword"
                 android:layout_width="wrap_content"
@@ -50,7 +46,6 @@
                 android:text="Password"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <EditText
                 android:id="@+id/editPassword"
                 android:layout_width="match_parent"
@@ -59,7 +54,6 @@
                 android:inputType="textPassword"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,7 +61,6 @@
                 android:text="Email"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <EditText
                 android:id="@+id/editEmail"
                 android:layout_width="match_parent"
@@ -76,7 +69,6 @@
                 android:inputType="textEmailAddress"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -84,7 +76,6 @@
                 android:text="Nama Lengkap"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <EditText
                 android:id="@+id/editNamaLengkap"
                 android:layout_width="match_parent"
@@ -92,7 +83,6 @@
                 android:layout_marginTop="5dp"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -100,7 +90,6 @@
                 android:text="Asal Sekolah"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <EditText
                 android:id="@+id/editAsalSekolah"
                 android:layout_width="match_parent"
@@ -108,7 +97,6 @@
                 android:layout_marginTop="5dp"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +104,6 @@
                 android:text="Alamat Tinggal"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <EditText
                 android:id="@+id/editAlamat"
                 android:layout_width="match_parent"
@@ -128,7 +115,6 @@
                 android:singleLine="false"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <Button
                 android:id="@+id/btnSimpan"
                 android:layout_width="match_parent"
@@ -140,5 +126,4 @@
                 android:textSize="14sp" />
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
