--- a/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Pertemuan 10/Proyek2/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,30 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".SplashScreen">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:fitsSystemWindows="true"
-            android:src="@drawable/logo"
-            />
+            android:src="@drawable/logo"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Proyek 2"
+            android:text="PROYEK 2"
+            android:textStyle="bold"
+            android:textSize="30sp"
             android:textColor="#000"
-            android:textSize="30sp"/>
-    </LinearLayout>
+            android:layout_gravity="center"/>
 
+    </LinearLayout>
 </RelativeLayout>
